fix: css media overlap

--- a/staticfiles/home/custom.css
+++ b/staticfiles/home/custom.css
@@ -83,7 +83,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 * {
-  border: 2px solid coral;
+  border: 1px solid coral;
 }
 
 
@@ -127,8 +127,9 @@ nav a {
 }
 
 nav {
-  display: inline-flex;
-  position: static;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
   z-index: 100;
   background-color: var(--nav-color);
   background-image: linear-gradient(62deg, #7e67b8 0%, var(--nav-color) 9em);
@@ -161,10 +162,6 @@ nav {
   align-items: center;
   transition: all 0.3s ease-in-out;
   border-radius: 10px;
-}
-
-* {
-  border: 0px solid lightcoral;
 }
 
 :root {
@@ -249,7 +246,6 @@ ul {
   font-size: .8em;
   border: 0px solid blue;
   flex-direction: row;
-  /*gap: 1em;*/
   justify-content: center;
   height: 100%;
 }
@@ -257,6 +253,8 @@ ul {
 .body-left,
 .body-right {
   border: 0px solid green;
+  justify-content: stretch;
+
 }
 
 .body-left {
@@ -264,9 +262,17 @@ ul {
   flex-direction: column;
   background: none;
   width: 100%;
-  height: 100%;
+  /*height: 100%;*/
   padding: 1em;
   gap: 1em;
+}
+
+.body-right {
+  top: 0;
+  position: sticky;
+  margin: 0;
+  padding: 1em .5em 1em 1em;
+  background-color: rgba(50, 100, 100, 0.1);
 }
 .page-header {
   border: 1px solid red;
@@ -325,23 +331,12 @@ ul {
   letter-spacing: .1em;
   padding: .1em;
   margin-left: auto;
-
-
 }
-
-
 
 .blog-entry {
   padding: 2em 0;
   border: 0px solid orange;
-}
 
-.body-right {
-  top: 0;
-  position: sticky;
-  margin: 0;
-  padding: 1em .5em 1em 1em;
-  background-color: rgba(50, 100, 100, 0.1);
 }
 .cards-container {
   display: flex;
@@ -494,11 +489,6 @@ ul {
 }
 
 @media (max-width: 768px) {
-  .body-whole {
-    flex-direction: column;
-    padding: .5em;
-  }
-
   nav {
     position: fixed;
     display: flex;
@@ -507,13 +497,10 @@ ul {
     background-color: var(--nav-color);
     filter: drop-shadow(1px 1px 2px grey);
   }
-
   .banner {
     font-size: 1.5em;
     height: 1.8em;
-
   }
-
   .nav-links {
     visibility: hidden;
     display: flex;
@@ -537,7 +524,7 @@ ul {
     width: 80%;
     text-align: center;
     align-items: center;
-    margin: 5px;
+    /*margin: 5px;*/
     /*background-color: transparent;*/
     background-color: rgb(41, 29, 59) !important;
     filter: drop-shadow(2px 2px 4px grey);
@@ -560,24 +547,39 @@ ul {
     align-items: center;
     color: pink;
   }
-
   .menu-icon:active {
     color: white;
   }
-
-  .nav-links, a {
-    padding: .5rem;
+  .body-whole {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: flex-start;
+    justify-content: flex-start;
+  }
+  .body-left {
+    margin-top: 1.8em;
+    flex-grow: 1;
+  }
+  .body-right {
+    flex-grow: 1;
+    align-self: center;
+    width: 100%;
   }
 }
 
 @media (min-width: 1600px) {
   .nav-bar {
-    max-width: 80vw;
+    max-width: 70vw;
+    margin: auto;
+  }
+  nav {
+    max-width: 70vw;
     margin: auto;
   }
 
   .body-whole {
-    max-width: 80vw;
+    max-width: 70vw;
     margin: auto;
   }
 }
